--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </form>
         </article>
     </main>
-    <footer class="animate__animated animate__bounce">
+    <footer>
         <section id="footer-info">
             <img src="./imgs/logo-gran-removebg.png" alt="logo-megoc">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam quibusdam tenetur provident, nostrum
@@ -125,7 +125,16 @@
             <li><img src="./imgs/america.png" alt=""></li>
         </ul>
     </footer>
-
+    <div id="cookies" class="hidden">
+        <p>Utilizamos cookies propias y de terceros durante la navegación por el sitio web, con la finalidad de permitir
+            el
+            acceso a las funcionalidades de la página web, extraer estadísticas de tráfico y mejorar la experiencia del
+            usuario.</p>
+        <div id="opciones-cookies">
+            <button id="cookie-aceptar" class="cookie" onclick="desaparecer()">Acepar</button>
+            <button id="cookie-rechazar" class="cookie" onclick="desaparecer()">Rechazar</button>
+        </div>
+    </div>
 </body>
 
 </html>
