--- a/galeria.html
+++ b/galeria.html
@@ -6,21 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./imgs/megoc-logo.png" type="image/x-icon">
-    <script src="./index.js" defer></script>
-    <!-- font awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- animate css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./galeria.css">
+    <script src="./index.js" defer></script>
     <title>Document</title>
 </head>
 
 <body>
     <aside id="mobile-menu">
-        <button onclick="anarIndex()" class="btn">TORNAR ARRERE</button>
+        <button onclick="anarIndex2()" class="btn">TORNAR ARRERE</button>
         <button class="btn">LA NOSTRA GALERIA</button>
     </aside>
     <header>
@@ -36,7 +34,7 @@
             <button onclick="anarIndex()" class="btn">TORNAR ARRERE</button>
             <button class="btn">LA NOSTRA GALERIA</button>
         </div>
-        <div id="container-menu" onclick="burguerMenu()" style="cursor: pointer;">
+        <div id="container-menu" onclick="burguerMenuGaleria()" style="cursor: pointer;">
             <i class="fas fa-bars"></i>
         </div>
     </header>
@@ -124,6 +122,21 @@
             <li><img src="./imgs/america.png" alt=""></li>
         </ul>
     </footer>
+    <script>
+        let menu = false;
+        function burguerMenuGaleria() {
+            const mobileMenu = document.getElementById('mobile-menu');
+            if (!menu) {
+                mobileMenu.style.display = 'flex';
+            } else {
+                mobileMenu.style.display = 'none';
+            }
+            menu = !menu;
+        }
+        function anarIndex2() {
+            window.location.href = window.location.href.replace('galeria', 'index')
+        }
+    </script>
 </body>
 
 </html>
