--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </a>
         <div id="navbar">
             <button onclick="tagradaCantar()" class="btn">T'AGRADA CANTAR?</button>
-            <button onclick="mostraConcerts()" class="btn">PRÓXIMS CONCERTS</button>
+            <button onclick="mostraConcerts()" class="btn">PRÒXIMS CONCERTS</button>
             <button onclick="anarGaleria()" class="btn">LA NOSTRA GALERIA</button>
         </div>
         <div id="container-menu" onclick="burguerMenu()" style="cursor: pointer;">
@@ -52,7 +52,7 @@
             <h1 class="titol">PRÓXIMS CONCERTS</h1>
             <table>
                 <tr>
-                    <td>10/02/22</td>
+                    <td>13/02/22</td>
                     <td>Concert en el centre polivalent</td>
                     <td>Oliva</td>
                 </tr>
